--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "card-game-simulator",
   "version": "1.0.0",
   "scripts": {
-    "build": "tsc --outDir dist main.ts",
-    "start": "node dist/main.js"
+    "build": "tsc --outDir dist index.ts",
+    "start": "node dist/index.js"
   },
   "devDependencies": {
     "typescript": "5.7.3"
